--- a/www/altaProductos.html
+++ b/www/altaProductos.html
@@ -1,4 +1,4 @@
-<div class="page" data-name="about">
+<div class="page" data-name="altaProductos">
     <div class="page-content">
         <div class="block-title">INGRESÁ EL NUEVO PRODUCTO:</div>
             <form class="list form-store-data margin-top" id="my-form">
@@ -6,9 +6,19 @@
                 <li>
                   <div class="item-content item-input">
                     <div class="item-inner">
+                      <div class="item-title item-label">Código del Producto</div>
+                      <div class="item-input-wrap">
+                        <input type="text" name="nombre" placeholder="Código del Producto" id="codigoProducto" />
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="item-content item-input">
+                    <div class="item-inner">
                       <div class="item-title item-label">Nombre del Producto</div>
                       <div class="item-input-wrap">
-                        <input type="text" name="nombre" placeholder="Nombre del Producto" />
+                        <input type="text" name="nombre" placeholder="Nombre del Producto" id="nombreProducto" />
                       </div>
                     </div>
                   </div>
@@ -18,7 +28,7 @@
                     <div class="item-inner">
                       <div class="item-title item-label">Marca</div>
                       <div class="item-input-wrap">
-                        <input type="text" name="marca" placeholder="Marca" />
+                        <input type="text" name="marca" placeholder="Marca" id="marcaProducto" />
                       </div>
                     </div>
                   </div>
@@ -28,7 +38,7 @@
                     <div class="item-inner">
                       <div class="item-title item-label">Detalle</div>
                       <div class="item-input-wrap">
-                        <input type="text" name="detalle" placeholder="Peso, volumen, tamaño" />
+                        <input type="text" name="detalle" placeholder="Peso, volumen, tamaño" id="detalleProducto" />
                       </div>
                     </div>
                   </div>
@@ -39,7 +49,7 @@
                       <div class="item-title">Recibe Alerta de Stock Mínimo?</div>
                       <div class="item-after">
                         <label class="toggle">
-                          <input type="checkbox" name="alerta" value="Si" /><i class="toggle-icon"></i>
+                          <input type="checkbox" name="alerta" value="Si" id="alertaProducto" /><i class="toggle-icon"></i>
                         </label>
                       </div>
                     </div>
@@ -50,7 +60,7 @@
                     <div class="item-inner">
                       <div class="item-title item-label">Stock Mínimo de Alerta</div>
                       <div class="item-input-wrap">
-                        <input type="text" name="detalle" placeholder="Cantidad Mínima de Stock" />
+                        <input type="text" name="detalle" placeholder="Cantidad Mínima de Stock" id="mininoAlerta" />
                       </div>
                     </div>
                   </div>
@@ -58,7 +68,7 @@
               </ul>
             </form>
             <p class="row block">
-                <button class="col-50 button button-small button-round button-fill">Agregar</button>
+                <button class="col-50 button button-small button-round button-fill" id="agregarProducto">Agregar</button>
             </p>
         </div>
     </div>
