ultimo intento fechas y datos

--- a/www/facturas.html
+++ b/www/facturas.html
@@ -53,7 +53,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Fecha de Factura</div>
                   <div class="item-input-wrap">
-                    <input type="text" placeholder="Fecha de Emisión" readonly="readonly" id="fechaFactura" />
+                    <input type="date" placeholder="Fecha de Emisión" id="fechaFactura" />
                   </div>
                 </div>
               </div>
@@ -63,7 +63,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Vencimiento de Factura</div>
                   <div class="item-input-wrap">
-                    <input type="text" placeholder="Fecha de Vencimiento" readonly="readonly" id="vencimientoFactura" />
+                    <input type="date" placeholder="Fecha de Vencimiento" id="vencimientoFactura" />
                   </div>
                 </div>
               </div>
@@ -116,7 +116,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Vencimiento de CAE</div>
                   <div class="item-input-wrap">
-                    <input type="text" placeholder="Fecha de Vencimiento CAE" readonly="readonly" id="vencimientocaeFactura" />
+                    <input type="date" placeholder="Fecha de Vencimiento CAE" id="vencimientocaeFactura" />
                   </div>
                 </div>
               </div>
@@ -148,7 +148,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Fecha de Factura</div>
                   <div class="item-input-wrap">
-                    <input type="text" placeholder="Fecha de Emisión" readonly="readonly" id="fechaFacturaEd" />
+                    <input type="date" placeholder="Fecha de Emisión" id="fechaFacturaEd" />
                   </div>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Vencimiento de Factura</div>
                   <div class="item-input-wrap">
-                    <input type="text" placeholder="Fecha de Vencimiento" readonly="readonly" id="vencimientoFacturaEd" />
+                    <input type="date" placeholder="Fecha de Vencimiento" id="vencimientoFacturaEd" />
                   </div>
                 </div>
               </div>
@@ -211,7 +211,7 @@
                 <div class="item-inner">
                   <div class="item-title item-label">Vencimiento de CAE</div>
                   <div class="item-input-wrap">
-                    <input type="text" placeholder="Fecha de Vencimiento CAE" readonly="readonly" id="vencimientocaeFacturaEd" />
+                    <input type="date" placeholder="Fecha de Vencimiento CAE" id="vencimientocaeFacturaEd" />
                   </div>
                 </div>
               </div>
