ok movimientos de stock

--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
       		<div class="page">
         		<div class="page-content">
           			<div class="block block-strong">
-            			<p><a class="panel-close" href="#">Close me</a></p>
+            			<div><a class="panel-close float-right" href="#"><i class="f7-icons">arrow_left_circle_fill</i></a></div>
             			<div class="list media-list menu-list">
 					        <ul>
 					          <li>
@@ -56,7 +56,7 @@
 					            </a>
 					          </li>
                               <li>
-                                <a href="/index/" class="item-content item-link panel-close">
+                                <a href="/stock/" class="item-content item-link panel-close">
                                   <div class="item-media">
                                     <i class="f7-icons">cart_fill</i>
                                   </div>
