--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
             			<div class="list media-list menu-list">
 					        <ul>
 					          <li>
-					            <a href="/index/" class="item-content item-link panel-close">
+					            <a href="/index/" id="index" class="item-content item-link panel-close">
 					              <div class="item-media">
 					                <i class="f7-icons">waveform_path_ecg</i>
 					              </div>
@@ -108,7 +108,7 @@
 					            </a>
 					          </li>
                               <li>
-                                <a href="/proveedores/" class="item-content item-link panel-close">
+                                <a href="/contacto/" class="item-content item-link panel-close">
                                   <div class="item-media">
                                     <i class="f7-icons">chat_bubble_text</i>
                                   </div>
@@ -158,11 +158,90 @@
             <div data-name="index" class="page">
                 <!-- Scrollable page content -->
                 <div class="page-content">
-                	<h2>HOLAAA</h2>
-                	<p>Algún eslogan que ocupe una o dos lineas.</p>
-                	<img src="img/inicio.jpg" class="img_inicio visible" id="imagenIndex">
-                    <canvas id="myChart" width="50" height="50" class="block-strong oculto"></canvas>
-                    <div id="alertas" class="oculto"></div>
+                  <div class="block bgnegrito padding-top padding-bottom no-margin-bottom">
+                    <div class="text-align-center mediano"><u><b>Bienvenid@ a StockAR !</b></u></div>
+                    <div class="padding-left margin-top">NOVEDADES ACTUALIZADAS PARA VOS :</div>
+                    <img src="img/inicio.jpg" class="img_inicio visible" id="imagenIndex">
+                  </div>
+
+                  <div class="card card-expandable" style="height: 15vh">
+                    <div class="card-content">
+                      <div class="bgpurple" style="height: 15vh">
+                        <div class="card-header text-color-grey display-block padding-top"><b>Alerta Facturas</b><br />
+                          <small style="opacity: 0.8">Próximos vencimientos</small>
+                        </div>
+                        <a href="#" class="link card-close card-opened-fade-in color-white"
+                          style="position: absolute; right: 15px; top: 15px">
+                          <i class="icon f7-icons">xmark_circle_fill</i>
+                        </a>
+                      </div>
+                      <div class="card-content-padding">
+                        <div id="alertas" class="oculto">
+                            <div id="alertas_vence"></div><br>
+                            <div id="alertas_vencio"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="card card-expandable" style="height: 15vh">
+                    <div class="card-content">
+                      <div class="bg-color-yellow" style="height: 15vh">
+                        <div class="card-header text-color-black display-block padding-top"><b>Alerta Productos</b><br />
+                          <small style="opacity: 0.8">Por agotar stock!</small>
+                        </div>
+                        <a href="#" class="link card-close card-opened-fade-in color-black"
+                          style="position: absolute; right: 15px; top: 15px">
+                          <i class="icon f7-icons">xmark_circle_fill</i>
+                        </a>
+                      </div>
+                      <div class="card-content-padding">
+                        <div id="alertas" class="oculto">
+                            <div id="alertas_stock"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div>
+                  <div class="block bgnegrito padding-top padding-bottom">
+                    <div class="row">
+                      <div class="col text-align-center">
+                        <div class="gauge"
+                        ></div>
+                        <div class="margin-top"><b>PAGOS SOBRE TOTAL DE FACTURA</b></div>
+                      </div>
+                      <div class="col text-align-center">
+                        <div class="margin-bottom"><b>PORCENTAJE DE FACTURAS PAGADAS</b></div>
+                        <div class="gauge2"
+                        ></div>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+
+                        <!--<div class="gauge gauge-init"
+                          data-type="semicircle"
+                          data-value="0.5"
+                          data-value-text-color="#e91e63"
+                          data-border-color="#e91e63"
+                          data-label-text="of 60kg total"
+                          data-label-text-color="#e91e63"
+                        ></div>
+                        <div class="gauge gauge-init"
+                          data-type="semicircle"
+                          data-value="0.3"
+                          data-value-text="30%"
+                          data-value-text-color="#0c82df"
+                          data-border-color="#0c82df"
+                        ></div>-->
+
+
+
+
+
+
+
                 </div>
             </div>
         </div>
